--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,8 +7,10 @@
     <string name="password">Password</string>
     <string name="confirm_password">Confirm password</string>
     <string name="already_has_account">I already have an account</string>
+    <string name="has_no_account_yet">I don\'t have an account yet</string>
     <string name="error_invalid_username">Username is required</string>
     <string name="error_invalid_password">Password is required</string>
     <string name="error_unmatched_password">Passwords should match</string>
     <string name="error_unable_to_signup">Unable to sign up</string>
+    <string name="error_unable_to_signin">Unable to sign in</string>
 </resources>
