--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,5 +15,6 @@
     <string name="error_unable_to_signin">Unable to sign in</string>
     <string name="error_unable_to_get_chat_list">Unable to get chat list</string>
     <string name="error_unable_to_get_message_list">Unable to get message list</string>
+    <string name="error_unable_to_connect">Unable to connect to given chat</string>
     <string name="error_unable_to_send_message">Unable to send message</string>
 </resources>
